fix(mail(js)): keep CKEditor toolbar visible

--- a/UI/WebServerResources/scss/views/MailerUI.scss
+++ b/UI/WebServerResources/scss/views/MailerUI.scss
@@ -305,7 +305,11 @@ md-sidenav {
 .sg-mail-editor-content {
   margin-bottom: 0;
   .cke_chrome {
-    border-bottom: 0;
+    border-color: transparent;
+  }
+  .cke_top {
+    position: sticky;
+    top: 0;
   }
 }
 
